bah. working on fixes

--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -681,6 +681,17 @@ pages = {331-339}
 	publisher={Springer}
 }
 
+@article{mitchell1982generalization,
+  title={Generalization as search},
+  author={Mitchell, Tom M},
+  journal={Artificial intelligence},
+  volume={18},
+  number={2},
+  pages={203--226},
+  year={1982},
+  publisher={Elsevier}
+}
+
 @article{dejong1986explanation,
   title={Explanation-based learning: An alternative view},
   author={DeJong, Gerald and Mooney, Raymond},
