--- a/Proposal/thesis_paper/jair paper.tex
+++ b/Proposal/thesis_paper/jair paper.tex
@@ -77,26 +77,15 @@ In order to combat these issues, we can make use of the extensive relational kno
 There have been several efforts in utilizing Linked Data for unsupervised feature generation. \citeA{cheng2011automatedfull} devise a framework for constructing features from linked data. By using intelligent queries, it is possible to construct features which utilize the knowledge base in a meaningful way. 
 \citeA{paulheim2012unsupervisedfull} developed FeGeLOD, an automated, fully unsupervised framework that constructs features by using entity recognition techniques to locate semantically meaningful features in the data set, and expand upon those entities using relations within the Semantic Web. They then use feature selection techniques to remove features with a large percentage of missing, identical, or unique\footnote{Values which only appear in a single example} values.
 
-%\cite{cheng2011automatedfull,paulheim2012unsupervisedfull}. \citeA{cheng2011automatedfull} devise a theoretical framework for constructing features from linked data. By specifying entity types relevant to the problem at hand, they restrict the space of possible features to a more manageable size, and allow for the creation of a reasonably small amount of features. They also note that this approach tends to lead to highly sparse feature vectors.
-
-
-%In the past, before the overwhelming popularity of inductive learning techniques, another school of learning methods, exemplified by works such as Explanation-Based learning , was explored as a way to allow automated learning of concepts. These methods relied on deduction of general concepts through the use of a knowledge base. Given an example and its target concept, these approaches attempt to find a small set of conditions within the knowledge base that prove the example is a member of that concept. These approaches utilize additional examples to refine the common conditions for membership, yielding a better overall concept.
-%Unlike inductive approaches, deductive methods attempt to utilize a knowledge base in order to construct logical deductions. A major advantage of this approach is that, given a sufficiently expressive knowledge base, it can identify complex concepts and relationships with only a few examples.
-
-%While these deductive approaches offered an alternative to inductive learning, the lack of good, comprehensive knowledge bases can be considered a major factor in their decline.
-%In recent years, however, the Semantic Web project (see survey, \citeR{bizer2009linkedfull}) has constructed a large resource in the form of Semantic Linked Data. Semantic Linked Data contains type-annotated entities covering a multitude of domains and connected using multiple semantically meaningful relations. In essence, this resource can be used as a massive, highly connected knowledge base encompassing a wide variety of domains.
-
-%Naturally, this raises the question of how we can utilize such knowledge bases without rendering the decades of advances and research invested into inductive learning approaches. To do so, we must utilize this knowledge base by generating features based on it, thus injecting it into the existing inductive learning framework. There have been several efforts in utilizing Linked Data for unsupervised feature generation. \citeA{cheng2011automatedfull}, for example, devise a framework for constructing features from linked data. By using intelligent queries, it is possible to construct features which utilize the knowledge base in a meaningful way. Despite this, the unsupervised nature of existing approaches limits us greatly when attempting to deduce more complex relationships between entities.
-%In order to identify more complex hypotheses within the data, a different approach is necessary. %Such a method should work more similarly to deductive methods, attempting to locate conditions
-
-In this work, we present a new supervised methodology for generating complex features based on a relational knowledge base. Our algorithm constructs new learning problems from existing feature values, using knowledge bases, such as the Semantic Web, as the features for this newly constructed problem.
-Using common induction algorithms, we can then construct a classifier that serves as a feature for the original problem. An important aspect of this approach is that it can be applied recursively within the new learning problem, allowing for an automated, concept-driven exploration of the large space of possible complex features, similarly to deductive approaches. This allows us to discover powerful connections that an unsupervised approach would have difficulty discovering.
+In this work, we build upon these existing approaches in order to present a new supervised methodology for generating complex features based on a relational knowledge base. Our algorithm recursively constructs new learning problems from existing feature values, using knowledge bases, such as the Semantic Web, to create the features for the new problem.
+Using common induction algorithms, we can then construct a classifier that serves as a feature for the original problem. 
+The contributions of this approach are threefold. First, usage of training data allows for an automated, concept-driven exploration of the large space of possible features, in a manner similar to deductive approaches. Second, this approach can be applied recursively within the constructed learning problem, allowing for easier discovery of complex features. Third, it can effectively utilize one-to-many relations, which are more difficult to use in unsupervised approaches.
 
 \section{Motivation} \label{motivation}
 
-Before we delve into the exact description of our algorithm, we would like to showcase its main ideas using an illustrative example.
-Suppose we are attempting to identify people with a high risk to be suffering from a certain genetic disease. Assume that the target concept to be discovered is that those at risk are women with ancestors originating from desert areas. To do so, we are given a training sample of sick and healthy people, containing various features, including gender and their full name.
-Assuming we have no additional information, an induction algorithm would likely produce a result similar to that shown in figure \ref{fig:tree_base}. While such a classifier will achieve a low training error, the hundreds of seemingly unrelated surnames will cause it to generalize poorly. This phenomenon is known as over-fitting, that is, the model is too adjusted to known data and cannot generalize.
+Before we delve into the exact description of our algorithm, we would like to illustrate its main ideas using an example.
+Suppose we are attempting to identify people with a high risk to be suffering from a certain genetic disease. Assume that the target concept to be discovered is that those at risk are women with ancestors originating from desert areas. To do so, we are given a training sample of sick and healthy people, containing various features, including gender and their full name. We call this learning problem $T_1$.
+Assuming we have no additional information, an induction algorithm would likely produce a result similar to that shown in figure \ref{fig:tree_base}. While such a classifier will achieve a low training error, the hundreds of seemingly unrelated surnames will cause it to generalize poorly. This phenomenon is known as over-fitting, that is, the model is too adjusted to known data and cannot generalize. We can intuitively see this in figure \ref{fig:tree_base}, as each leaf hypothesis is supported by only a single example.
 
 \begin{figure}
 	\centering
@@ -105,13 +94,14 @@ Assuming we have no additional information, an induction algorithm would likely 
 	\label{fig:tree_base}
 \end{figure}
 
-The above example showcases that without additional features, an induction algorithm will either overfit its classifier to the given data, or otherwise give a very poor result. Even if we attempt to use standard feature generation approaches, there is no additional information that combinations of these features would find.
-However, if we assume that we have access to a relational knowledge base connecting surnames to common countries of origin, we can begin to apply knowledge-based feature generation techniques to the problem, as we can move from the domain of surnames to that of countries. An unsupervised feature generation algorithm might generate a feature for each country of origin, asking whether that surname is common to that country. This would generate dozens of features, most of which are irrelevant to a given example.
+The above example illustrates that without additional knowledge, an induction algorithm will yield a very poor result. Even if we attempt to use standard feature generation approaches, there is no additional information that combinations of these features would find.
+However, if we assume that we have access to a relational knowledge base connecting surnames to common countries of origin, we can begin to apply knowledge-based feature generation techniques to the problem, as we can move from the domain of surnames to that of countries. 
 
-Using our approach, we can improve upon this. In the original problem, the node of value female contains objects of type person. Thus, our goal is to separate this set of people to those at high risk and those at low risk. Therefore, Our method defines a new learning problem with the following training set: The objects are surnames; surnames of people with the disease are labelled as positive. The features for these objects are extracted from the knowledge base- their countries of origin.
-Solving the above learning problem through an induction algorithm yields a classifier on surnames. This classifier can be used as a binary feature in the original problem. For example, it can be used as a feature in the node of value female in figure \ref{fig:tree_base}, yielding the tree seen in figure \ref{fig:lvl1_tree}. 
+ Our goal is to separate this set of people to those at high risk and those at low risk using induction algorithms. We see that the existing feature set is insufficient to perform this task successfully. Therefore, our approach aims to construct new features for the learning task $T_1$ by recursively creating a new learning problem $T_2$. Once we have done so, we can use induction methods on $T_2$ in order to create a classifier that can be used in $T_1$. We construct $T_2$ as follows: 
+  The training objects are surnames; surnames of people with the disease are labelled as positive. The features for these new objects are extracted from the knowledge base, they are their countries of origin.
+Solving the above learning problem through an induction algorithm yields a classifier on surnames that distinguishes between surnames of patients with the disease and surnames of healthy individuals. This classifier for $T_2$ can then be used as a binary feature in the original problem $T_1$ by applying it to the feature value of surname. For example, it can be used as a feature in the node of value female in figure \ref{fig:tree_base}, yielding the tree seen in figure \ref{fig:lvl1_tree}. 
 
-This new feature gives us a better generalization over the baseline solution, as we now abstract the long list of surnames to a short list of countries. This result also allows us to capture previously unseen surnames from those countries. However, this is not a sufficient solution, as we have no way of generalizing on previously unseen countries of origin. An immediate advantage of this approach is that rather than generating dozens of features like unsupervised techniques, we have created a single feature, that is explicitly based on the concept that we are attempting to learn. 
+This new feature gives us a better generalization over the baseline solution, as we now abstract the long list of surnames to a short list of countries. We can see this as nodes in the classifier for $T_2$ are derived from multiple surnames. This result also allows us to capture previously unseen surnames from those countries. However, this is not a sufficient solution, as we have no way of generalizing on previously unseen countries of origin, and some countries may not have sufficient representation to induce an accurate classifier. %talk about not concept?
 
 
 \begin{figure}
@@ -121,9 +111,15 @@ This new feature gives us a better generalization over the baseline solution, as
 	\label{fig:lvl1_tree}
 \end{figure}
 
-Suppose that we also have access to a knowledge base containing facts regarding countries, such as average temperature, precipitation, and more (one such knowledge base is DBpedia). Using such a knowledge base, an unsupervised approach might generate features looking at the properties of the countries that a given surname is common in, giving us features along the lines of ``is this surname common in a country whose population is over 80 million?". This approach would result in a potential explosion of features, most of which are irrelevant to the learning problem at hand. This problem is greatly exacerbated when the knowledge base contains many relevant relationships, potentially causing an exponential explosion of new features.
+Once again, we require additional knowledge in order to capture the target concept of $T_2$. 
+Therefore, we can recursively apply our method while trying to learn $T_2$ in an attempt to better locate the target concept and induce a classifier for $T_1$.
+We create a new training set, the objects of which are countries of origin, with countries of surnames belonging to people with high risk are labelled as positive. The knowledge base regarding countries is then used to construct features for this new this training set, giving us a recursive learning problem $T_3$.
 
-Following our approach, we can recursively apply our method while trying to learn the new problem. We create a new training set, the objects of which are countries of origin, with countries of surnames belonging to people with high risk are labelled as positive. The knowledge base regarding countries is then used to construct features for this new this training set, which can then be given as input to an induction algorithm. As a result of this process, we end up with a classifier that tries to separate between countries of origin of people at risks and those not at risk. This classifier is then used as a feature by the first level recursive algorithm. The whole process is depicted in figure \ref{fig:moving_to_lvl2}. The resulting two-level recursive classifier is depicted in figure \ref{fig:lvl2_tree}. This constructed feature allows us to concisely and accurately capture the target concept, as the construction process is guided by the target concept, in a manner similar to that of deductive approaches.
+We can then use $T_3$ as an input to an induction algorithm. As a result of this process, we end up with a classifier for $T_3$, which tries to separate between countries of origin of people at risk and those not at risk. This classifier will do so by looking at the properties of countries, and reach the conclusion that countries with high average temperature and low precipitation: both being characteristic of desert areas.
+This classifier is then used on the country of origin feature in $T_2$, yielding a new feature for $T_2$.  This new feature can then be used when inducting a classifier for $T_2$, which, as we have mentioned earlier, is used as a feature for the original problem $T_1$.
+
+The complete process is depicted in figure \ref{fig:moving_to_lvl2}. The resulting two-level recursive classifier is depicted in figure \ref{fig:lvl2_tree}. This constructed feature allows us to concisely and accurately capture the target concept, as the construction process is guided by the target concept, in a manner similar to that of deductive approaches.
+While this is a simple example, it illustrates how an unsolvable learning problem given the original features can be solved via the use of complex additional knowledge and existing induction methods.
 
 %We also note that while an unsupervised approach can also create a combination of features that when used together allow us to identify the target concept, the unsupervised nature of the search makes such an attempt computationally expensive, especially when the knowledge base is extensive and multiple logical leaps are necessary.
 
@@ -140,8 +136,6 @@ Following our approach, we can recursively apply our method while trying to lear
 	\caption{A two-level constructed feature used within a decision tree}
 	\label{fig:lvl2_tree}
 \end{figure*}
-
-While this is a simple example, it showcases the fact that additional information and complex features can result in an overall simpler, more general result. It is important to mention that an unsupervised feature generation approach could also solve this problem, but would be forced to generate more features, many of which irrelevant to the problem at hand. In cases where the knowledge base is extensive and contains many connections between entities, using an unsupervised approach to try and identify complex relationships that are buried deep beneath the surface problem would be computationally expensive to locate, and difficult to evaluate.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -771,6 +765,9 @@ in supervised we have us, ilp, upgrade techniques
 works on linked data ? so can talk about uses in search / graph based algorithms / trying to do entity linking and then use it->us
 
 ?????
+
+%Suppose that we also have access to a knowledge base containing facts regarding countries, such as average temperature, precipitation, and more (one such knowledge base is DBpedia). Using such a knowledge base, an unsupervised approach might generate features looking at the properties of the countries that a given surname is common in, giving us features along the lines of ``is this surname common in a country whose population is over 80 million?". This approach would result in a potential explosion of features, most of which are irrelevant to the learning problem at hand. This problem is greatly exacerbated when the knowledge base contains many relevant relationships, potentially causing an exponential explosion of new features.
+
 
 %There are many existing feature generation algorithms, most of which operating by combining existing features in order to produce new ones. The LFC algorithm \cite{ragavan1993complex} combines the original features using logical operators such as $\land ,\lnot$. LFC generates features using the current set of binary features (including generated ones), and requires that any new feature will yield an increase over the original features combined to create it, in terms of information gain.
 %The LDMT algorithm \cite{utgo1991linear} uses linear combinations of the original features to construct more informative ones. This allows for the use of non-binary features in feature generation approaches.
